feat：完善通用缓存存储框架的设计

--- a/AppMvx/build.gradle
+++ b/AppMvx/build.gradle
@@ -35,4 +35,6 @@ dependencies {
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
     implementation(rootProject.ext.dependencies["constraintlayout"])
+
+    implementation project(path: ':KotlinBusiness')
 }
