--- a/Business/NotifyBusiness/build.gradle
+++ b/Business/NotifyBusiness/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation(rootProject.ext.dependencies["annotation"])
     implementation 'com.github.yangchong211.YCEfficient:AppProcessLib:1.3.1'
     implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
+    implementation 'com.github.yangchong211.YCWidgetLib:RoundCorners:1.0.5'
 
     implementation project(path: ':ToolUtilsLib')
 //    implementation 'com.github.yangchong211.YCNotification:NotificationLib:1.0.4'
