--- a/AppServer/build.gradle
+++ b/AppServer/build.gradle
@@ -59,5 +59,6 @@ dependencies {
     implementation project(path: ':AppContextLib')
     implementation project(path: ':NotCaptureLib')
     implementation project(path: ':AudioHelper')
+    implementation project(path: ':TcpManager')
 }
 
