--- a/settings.gradle
+++ b/settings.gradle
@@ -38,7 +38,7 @@ project(':LibraryLayer').projectDir = new File('Business/LibraryLayer')
 
 /* +++++++++ 框架业务服务层 +++++++++ */
 include ':ImageServer', ':HttpServer', ':ShareServer', ':NfcServer',
-        ':GsonServer', ':IpcServer', ':ObjectEqualLib',':TcpServerLib',
+        ':GsonServer', ':IpcServer', ':ObjectEqualLib',':TcpServerLib', ':TcpManager',
         ':EasyBleServer', ':LogUpload', ':OkHttpServer', ':PrivateServer',
         ':AppLogClient', ':AppLogService', ':NetInterceptor', ':SignalHooker',
         ':GlideProgressLib', ':CompressServer',  ':RetrofitNetLib',  ':Transformation'
@@ -62,6 +62,7 @@ project(':CompressServer').projectDir = new File('ServerLib/CompressServer')
 project(':RetrofitNetLib').projectDir = new File('ServerLib/RetrofitNetLib')
 project(':Transformation').projectDir = new File('ServerLib/Transformation')
 project(':TcpServerLib').projectDir = new File('ServerLib/TcpServerLib')
+project(':TcpManager').projectDir = new File('ServerLib/TcpManager')
 
 
 
@@ -273,6 +274,7 @@ project(':VideoView').projectDir = new File('PlayerLib/VideoView')
 project(':BellsVibrations').projectDir = new File('PlayerLib/BellsVibrations')
 project(':AudioHelper').projectDir = new File('PlayerLib/AudioHelper')
 project(':MediaHelper').projectDir = new File('PlayerLib/MediaHelper')
+
 
 
 
