--- a/ServerLib/TcpManager/build.gradle
+++ b/ServerLib/TcpManager/build.gradle
@@ -30,7 +30,9 @@ dependencies {
     implementation rootProject.ext.dependencies["annotation"]
     implementation(rootProject.ext.dependencies["kotlinxJdk"])
     implementation rootProject.ext.dependencies["coreKtx"]
-
+    implementation rootProject.ext.dependencies["gson"]
+    //网络判断库
+    implementation 'com.github.yangchong211.YCCommonLib:NetWorkLib:1.4.8'
+    api project(':TcpServerLib')
     implementation project(path: ':AppLogClient')
-    implementation project(path: ':AppLogService')
 }
