--- a/ServerLib/TcpManager/build.gradle
+++ b/ServerLib/TcpManager/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     implementation rootProject.ext.dependencies["gson"]
     //网络判断库
     implementation 'com.github.yangchong211.YCCommonLib:NetWorkLib:1.4.8'
+    //Context上下文库
+    implementation 'com.github.yangchong211.YCCommonLib:AppContextLib:1.4.8'
     api project(':TcpServerLib')
     implementation project(path: ':AppLogClient')
 }
