--- a/Business/BleBusiness/build.gradle
+++ b/Business/BleBusiness/build.gradle
@@ -31,10 +31,15 @@ dependencies {
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["recyclerview"])
     implementation project(path: ':EasyBleServer')
-    implementation project(path: ':ToolUtilsLib')
-    implementation project(path: ':AppLogLib')
+    //Context上下文库
+    implementation 'com.github.yangchong211.YCCommonLib:AppContextLib:1.4.8'
+    //工具类utils
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.4.8'
+    //通用日志输出库
+    implementation 'com.github.yangchong211.YCCommonLib:AppLogLib:1.4.8'
     implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
-    implementation project(path: ':ApplicationLib')
+    //Application库
+    implementation 'com.github.yangchong211.YCCommonLib:ApplicationLib:1.4.8'
 }
 
 
