--- a/ServerLib/TcpServerLib/build.gradle
+++ b/ServerLib/TcpServerLib/build.gradle
@@ -30,7 +30,8 @@ dependencies {
     implementation rootProject.ext.dependencies["annotation"]
     implementation(rootProject.ext.dependencies["kotlinxJdk"])
     implementation rootProject.ext.dependencies["coreKtx"]
-
+    //io流读写库
+    implementation 'com.github.yangchong211.YCCommonLib:FileIoHelper:1.4.8'
     implementation project(path: ':AppLogClient')
     implementation project(path: ':AppLogService')
 }
