--- a/ServerLib/AppLogClient/build.gradle
+++ b/ServerLib/AppLogClient/build.gradle
@@ -28,6 +28,10 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation rootProject.ext.dependencies["gson"]
-    implementation project(path: ':ToolUtilsLib')
-    implementation project(path: ':EventUploadLib')
+    //工具类utils
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.4.8'
+    //同上上报库
+    implementation 'com.github.yangchong211.YCCommonLib:EventUploadLib:1.4.8'
+    //implementation project(path: ':ToolUtilsLib')
+    //implementation project(path: ':EventUploadLib')
 }
