--- a/ServerLib/CompressServer/build.gradle
+++ b/ServerLib/CompressServer/build.gradle
@@ -26,8 +26,14 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
-    implementation project(path: ':ImageToolLib')
-    implementation project(path: ':ToolFileLib')
-    implementation project(path: ':FileIoHelper')
+    //图片工具库
+    implementation 'com.github.yangchong211.YCCommonLib:ImageToolLib:1.4.8'
+    //File文件库
+    implementation 'com.github.yangchong211.YCCommonLib:ToolFileLib:1.4.8'
+    //io流读写库
+    implementation 'com.github.yangchong211.YCCommonLib:FileIoHelper:1.4.8'
+    //implementation project(path: ':ImageToolLib')
+    //implementation project(path: ':ToolFileLib')
+    //implementation project(path: ':FileIoHelper')
     implementation 'com.github.yangchong211.YCThreadPool:EasyExecutor:1.3.8'
 }
