--- a/ServerLib/EasyBleServer/build.gradle
+++ b/ServerLib/EasyBleServer/build.gradle
@@ -29,5 +29,7 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
-    implementation project(path: ':ToolUtilsLib')
+    //implementation project(path: ':ToolUtilsLib')
+    //工具类utils
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.4.8'
 }
