--- a/ToolLib/WebSocketLib/build.gradle
+++ b/ToolLib/WebSocketLib/build.gradle
@@ -31,5 +31,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation(rootProject.ext.dependencies["okhttp"])
+    //工具类utils
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.4.8'
     implementation 'com.squareup.okhttp3:mockwebserver:3.10.0'
 }
