--- a/ToolLib/SocketIoLib/build.gradle
+++ b/ToolLib/SocketIoLib/build.gradle
@@ -39,5 +39,6 @@ ext{
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project.ext.SocketIoServiceDependencies['socketio']
+    implementation 'com.github.yangchong211.YCThreadPool:EasyExecutor:1.3.8'
     implementation project(path: ':NotCaptureLib')
 }
