--- a/ThirdLib/leakcanary-android-no-op/build.gradle
+++ b/ThirdLib/leakcanary-android-no-op/build.gradle
@@ -21,5 +21,6 @@ dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
   implementation(rootProject.ext.dependencies["appcompat"])
   implementation(rootProject.ext.dependencies["annotation"])
+  implementation "com.android.tools.build:gradle:$buildVersion"
 }
 
