--- a/AptHelper/AppInitCommon/build.gradle
+++ b/AptHelper/AppInitCommon/build.gradle
@@ -2,6 +2,6 @@ apply plugin: 'java'
 apply plugin: 'com.github.dcendents.android-maven'
 
 dependencies {
-    implementation 'com.android.tools.build:gradle:3.0.0'
+    implementation "com.android.tools.build:gradle:$buildVersion"
     compileOnly 'com.google.android:android:4.1.1.4'
 }
