--- a/ThirdLib/leakcanary-sample/build.gradle
+++ b/ThirdLib/leakcanary-sample/build.gradle
@@ -45,9 +45,9 @@ android {
 
 dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
-  debugImplementation project(':leakcanary-android')
+  implementation project(':leakcanary-android')
   releaseImplementation project(':leakcanary-android-no-op')
-
+  implementation "com.android.tools.build:gradle:$buildVersion"
   testImplementation "junit:junit:4.12"
   testImplementation "org.robolectric:robolectric:4.0-alpha-3"
   androidTestImplementation project(':leakcanary-android-instrumentation')
