--- a/ServerLib/LogUpload/build.gradle
+++ b/ServerLib/LogUpload/build.gradle
@@ -41,6 +41,8 @@ dependencies {
     implementation rootProject.ext.dependencies["okhttp"]
     //implementation project(path: ':ActivityManager')
     //implementation project(path: ':ToolUtilsLib')
+    implementation project(path: ':ZipFileLib')
+//    implementation 'com.github.yangchong211.YCCommonLib:ZipFileLib:1.4.8'
     implementation 'com.github.yangchong211.YCCommonLib:ActivityManager:1.4.8'
     implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.4.8'
     implementation 'com.github.yangchong211.YCThreadPool:EasyExecutor:1.3.8'
