--- a/AppGrpc/src/main/AndroidManifest.xml
+++ b/AppGrpc/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.yc.appgrpc">
 
+    <!-- 添加网络权限 -->
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,6 +19,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".HelloWorldActivity"/>
+        <activity android:name=".WanAndroidActivity"/>
     </application>
 
 </manifest>
