feat：grpc库网络请求

--- a/AppGrpc/src/main/AndroidManifest.xml
+++ b/AppGrpc/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         </activity>
         <activity android:name=".HelloWorldActivity"/>
         <activity android:name=".WanAndroidActivity"/>
+        <activity android:name=".RouteGuideActivity"/>
     </application>
 
 </manifest>
