--- a/AppServer/build.gradle
+++ b/AppServer/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation project(path: ':NotCaptureLib')
     implementation project(path: ':AudioHelper')
     implementation project(path: ':TcpManager')
+    implementation project(path: ':HttpServer')
 
 }
 
