--- a/AppGrpc/build.gradle
+++ b/AppGrpc/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     implementation rootProject.ext.dependencies["appcompat"]
     implementation rootProject.ext.dependencies["annotation"]
     implementation(rootProject.ext.dependencies["constraintlayout"])
+    implementation rootProject.ext.dependencies["gson"]
     implementation project(path: ':RoundCorners')
     implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
 
