--- a/MonitorLib/MonitorApmLib/build.gradle
+++ b/MonitorLib/MonitorApmLib/build.gradle
@@ -11,7 +11,6 @@ android {
         targetSdkVersion rootProject.ext.android["targetSdkVersion"]
         versionCode rootProject.ext.android["versionCode"]
         versionName rootProject.ext.android["versionName"]
-        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
 
     buildTypes {
@@ -30,4 +29,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
+    implementation project(path: ':ToolUtilsLib')
+    //工具类utils
+    //implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.4.8'
 }
