--- a/ServerLib/GrpcServer/build.gradle
+++ b/ServerLib/GrpcServer/build.gradle
@@ -1,7 +1,6 @@
 apply plugin: 'com.android.library'
 apply from: rootProject.projectDir.absolutePath + "/yc.gradle"
-//迁移到jitpack
-apply plugin: 'com.github.dcendents.android-maven'
+
 
 android {
     compileSdkVersion rootProject.ext.android["compileSdkVersion"]
@@ -31,4 +30,13 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
+    implementation rootProject.ext.dependencies["gson"]
+    //工具类utils
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.4.8'
+
+    //protobuf
+    implementation 'io.grpc:grpc-okhttp:1.33.0'
+    implementation 'io.grpc:grpc-protobuf-lite:1.33.0'
+    implementation 'io.grpc:grpc-stub:1.33.0'
+    implementation 'org.apache.tomcat:annotations-api:6.0.53'
 }
