--- a/AppGrpc/build.gradle
+++ b/AppGrpc/build.gradle
@@ -67,7 +67,10 @@ dependencies {
     implementation(rootProject.ext.dependencies["constraintlayout"])
     implementation rootProject.ext.dependencies["gson"]
     implementation project(path: ':RoundCorners')
+    implementation project(path: ':GrpcServer')
     implementation 'com.github.yangchong211.YCDialog:ToastUtils:3.6.9'
+    //工具类utils
+    implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.4.8'
 
     //protobuf
     implementation 'io.grpc:grpc-okhttp:1.33.0'
