--- a/MonitorLib/MonitorApmLib/build.gradle
+++ b/MonitorLib/MonitorApmLib/build.gradle
@@ -30,6 +30,15 @@ dependencies {
     implementation(rootProject.ext.dependencies["appcompat"])
     implementation(rootProject.ext.dependencies["annotation"])
     implementation project(path: ':ToolUtilsLib')
+    //cpu采集工具
+    api project(path: ':MonitorCpuLib')
+    //卡顿采集工具
+    api project(path: ':MonitorCatonLib')
+    //anr 采集工具
+    api project(path: ':MonitorAnrLib')
+    //leak 采集工具
+    api project(path: ':MonitorLeakLib')
     //工具类utils
     //implementation 'com.github.yangchong211.YCCommonLib:ToolUtilsLib:1.4.8'
+
 }
