--- a/MonitorLib/MonitorLeakLib/build.gradle
+++ b/MonitorLib/MonitorLeakLib/build.gradle
@@ -4,12 +4,12 @@ apply from: rootProject.projectDir.absolutePath + "/yc.gradle"
 android {
     compileSdkVersion rootProject.ext.android["compileSdkVersion"]
     //buildToolsVersion rootProject.ext.android["buildToolsVersion"]
+
     defaultConfig {
         minSdkVersion rootProject.ext.android["minSdkVersion"]
         targetSdkVersion rootProject.ext.android["targetSdkVersion"]
         versionCode rootProject.ext.android["versionCode"]
         versionName rootProject.ext.android["versionName"]
-        testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
 
     buildTypes {
@@ -26,7 +26,13 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation(rootProject.ext.dependencies["appcompat"])
-    implementation(rootProject.ext.dependencies["annotation"])
-}
+    implementation rootProject.ext.dependencies["appcompat"]
+    implementation rootProject.ext.dependencies["annotation"]
+    //activity栈管理
+    implementation 'com.github.yangchong211.YCCommonLib:ActivityManager:1.4.8'
+    //fragment生命周期监听库
+    implementation 'com.github.yangchong211.YCCommonLib:FragmentManager:1.4.8'
+    //轻量级异步线程封装库：https://github.com/yangchong211/YCThreadPool
+    implementation 'com.github.yangchong211.YCThreadPool:EasyExecutor:1.3.8'
 
+}
